--- a/src/pages/cookie.astro
+++ b/src/pages/cookie.astro
@@ -14,7 +14,7 @@ import cookieImg from "../assets/perfectCookie.png";
     >
       <Image src={cookieImg} alt="COOKIE" id="cookie" width="200" />
     </div>
-    <h2>YOU DID <span id="local-num-clicks"></span> % OF THE CLICKS</h2>
+    <h2>YOU DID <span id="local-num-clicks"></span>%) CLICKS</h2>
     <h3>NUMBER OF CONNECTED PEOPLE : <span id="connected-people"></span></h3>
   </div>
 </BaseLayout>
