Animations and Redis Browser Cache

--- a/src/pages/cookie.astro
+++ b/src/pages/cookie.astro
@@ -8,7 +8,7 @@ import cookieImg from "../assets/perfectCookie.png";
 <BaseLayout>
   <div class="justify-center text-center">
     <div
-      class="tooltip tooltip-open tooltip-top m-10 flex justify-center"
+      class="tooltip tooltip-open tooltip-top m-10 flex justify-center touch-manipulation"
       data-tip=""
       id="click-tip-display"
     >
