--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,4 +11,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   <Projects />
   <hr />
   <Technologies />
+  <div class="toast">
+      <a href="/cookie" class="btn btn-sm">Cookie ? 🍪</a>
+  </div>
 </BaseLayout>
