--- a/src/pages/cookie.astro
+++ b/src/pages/cookie.astro
@@ -6,7 +6,7 @@ import cookieImg from "../assets/perfectCookie.png";
 ---
 
 <BaseLayout>
-  <span id="loading" class=" m-20 loading loading-spinner loading-lg"></span>
+  <span id="cookie_loading" class="m-20 loading loading-spinner loading-lg"></span>
   <div id="cookie_content" class="justify-center text-center hidden">
     <div
       class="tooltip tooltip-open tooltip-top m-10 flex justify-center touch-manipulation"
