tiny fixes of one of the type error

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,7 +24,7 @@ const computedTitle = title === SITE_TITLE ? title : `${title} | ${SITE_TITLE}`;
           localStorage.getItem("theme"),
         );
       // "theme" LocalStorage value is set by the package to remember user preference.
-      // The value is checked and applyed before rendering anything.
+      // The value is checked and applied before rendering anything.
     </script>
     <script>
       import { themeChange } from "theme-change";
