--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,7 +31,7 @@ const computedTitle = title === SITE_TITLE ? title : `${title} | ${SITE_TITLE}`;
       themeChange();
       // 👆 you could import the CDN directly instead of these two lines
 
-      document.addEventListener("astro:after-swap", themeChange);
+      document.addEventListener("astro:after-swap" as any, themeChange);
     </script>
     <BaseHead title={computedTitle} description={description} />
     <ViewTransitions />
