--- a/src/components/ThemeSelector.astro
+++ b/src/components/ThemeSelector.astro
@@ -27,6 +27,9 @@ const themes = [
   "night",
   "coffee",
   "winter",
+  "dim",
+  "nord",
+  "sunset",
 ];
 ---
 
@@ -64,31 +67,39 @@ const themes = [
     <div class="grid grid-cols-1 gap-3 p-3" tabindex="0">
       {
         themes.map((theme) => (
-          <div
-            class="outline-base-content overflow-hidden rounded-lg outline-2 outline-offset-2"
-            data-set-theme={theme}
-            data-act-class="outline"
+        <button
+          class="outline-base-content text-start outline-offset-4"
+          data-set-theme={theme}
+          data-act-class="[&_svg]:visible"
           >
-            <div
-              data-theme={theme}
-              class="bg-base-100 text-base-content w-full cursor-pointer font-sans"
-            >
-              <div class="grid grid-cols-5 grid-rows-3">
-                <div class="col-span-5 row-span-3 row-start-1 flex gap-1 py-3 px-4">
-                  <div class="flex-grow text-sm font-bold">{theme}</div>
-                  <div class="flex flex-shrink-0 flex-wrap gap-1">
-                    <div class="bg-primary w-2 rounded" />
-                    <div class="bg-secondary w-2 rounded" />
-                    <div class="bg-accent w-2 rounded" />
-                    <div
-                      class="bg-neutral
-                      w-2 rounded"
-                    />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <span
+            data-theme={theme}
+            class="bg-base-100 rounded-btn text-base-content block w-full cursor-pointer font-sans">
+            <span class="grid grid-cols-5 grid-rows-3">
+              <span class="col-span-5 row-span-3 row-start-1 flex items-center gap-2 px-4 py-3">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="invisible h-3 w-3 shrink-0">
+                  <path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z">
+                  </path>
+                </svg>
+                <span class="flex-grow text-sm">
+                  {theme}
+                </span>
+                <span class="flex h-full shrink-0 flex-wrap gap-1">
+                  <span class="bg-primary rounded-badge w-2"></span>
+                  <span class="bg-secondary rounded-badge w-2"></span>
+                  <span class="bg-accent rounded-badge w-2"></span>
+                  <span class="bg-neutral rounded-badge w-2"></span>
+                </span>
+              </span>
+            </span>
+          </span>
+        </button>
         ))
       }
     </div>
