--- a/src/pages/cookie.astro
+++ b/src/pages/cookie.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 import cookieImg from "../assets/perfectCookie.png";
 ---
 
-<BaseLayout>
+<BaseLayout title="Cookie">
   <span id="cookie_loading" class="m-20 loading loading-spinner loading-lg"></span>
   <div id="cookie_content" class="justify-center text-center hidden">
     <div
