--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -38,7 +38,7 @@ const computedTitle = title === SITE_TITLE ? title : `${title} | ${SITE_TITLE}`;
   </head>
   <body>
     <Header />
-    <div class="md:flex md:justify-center">
+    <div class="flex justify-center">
       <main class="p-6 pt-10 lg:pt-0 max-w-[1200px]">
         <slot />
       </main>
