Update version + fix

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -12,8 +12,7 @@ import GimmeApp from "../assets/proj_pics/GimmeApp.webp";
   <h1>My personal projects</h1>
   <ProjectCard
     title="Gimme App"
-    description=" A full stack Marketplace made with Spring around a typical MVC architecture. Allows users to post items to give,
-chat and purchase them from a front-end or an API."
+    description=" A full stack Marketplace made with Spring around a typical MVC architecture. Allows users to post items to give, chat and purchase them from a front-end or an API."
     img={GimmeApp}
     tags={["Java", "SpringBoot", "Gradle", "Docker"]}
     gitUrl="https://github.com/Eliaz-LR/Gimme-App"
