--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -39,7 +39,7 @@ const computedTitle = title === SITE_TITLE ? title : `${title} | ${SITE_TITLE}`;
   <body>
     <Header />
     <div class="flex justify-center">
-      <main class="p-6 pt-10 lg:pt-0 max-w-[1200px]">
+      <main class="p-6 pt-10 lg:pt-0 max-w-[1200px] space-y-6">
         <slot />
       </main>
     </div>
