--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -16,8 +16,8 @@ import GimmeApp from "../assets/proj_pics/GimmeApp.webp";
     img={GimmeApp}
     tags={["Java", "SpringBoot", "Gradle", "Docker"]}
     gitUrl="https://github.com/Eliaz-LR/Gimme-App"
-    dateStart={new Date(2024, 5, 28)}
-    dateEnd={new Date(2024,)}
+    dateStart={new Date(2024, 9, 24)}
+    dateEnd={new Date(2024, 11, 15)}
   />
   <ProjectCard
     title="Portfolio Website 3.0 (this one)"
